# command_fs

./: .gitignore  README.md  pyproject.toml
config/: commands.yaml
docs/adr/: 0001-programming-language-selection.md  0002-implementation-architecture.md  0003-switch-to-rustler-and-rust-fuse.md
docs/design/: architecture.md  command_protocol.md  file_types.md
docs/dev/: idea.md  plan.md  post-mortem.md
src/command_fs/: __init__.py  __main__.py  cache.py  commands.py  config.py  core.py
src/command_fs/default_config/: commands.yaml
tests/: test_cli.py  test_command_fs.py  test_config.py
